src/examples/test-doubles/OnConsecutiveCallsExampleTest.php.out
./tools/phpunit tests/OnConsecutiveCallsExampleTest.php
PHPUnit 11.5-g1d71d8f8f6 by Sebastian Bergmann and contributors.

Runtime:       PHP 8.4.1

E                                                                   1 / 1 (100%)

Time: 00:00, Memory: 25.32 MB

There was 1 error:

1) OnConsecutiveCallsExampleTest::testOnConsecutiveCallsStub
PHPUnit\Framework\MockObject\Generator\ClassIsFinalException: Class "SomeClass" is declared "final" and cannot be doubled

/path/to/tests/OnConsecutiveCallsExampleTest.php:9

ERRORS!
Tests: 1, Assertions: 0, Errors: 1.
